


class Filter:

    def __init__(self):
        ...
